--- a/public/index.html
+++ b/public/index.html
@@ -327,11 +327,22 @@
             <li>Ssemombwe e Kisaliza, Busujju</li>
           </ol>
           
-        </p>      
+        </p> 
+        
+
+
       </div>
       <a href="javascript:void(0)" id="readMoreBtn" onclick="toggleReadMore()"><strong> Read more...</strong></a>
     </div>
   </section>
+
+  <section id="documents" class="container mt-5">
+    <h2>Documents</h2>
+    <p>Explore the rich history of the Kkobe Clan through this book document: <strong>Ekika Ky'Ekkobe</strong>.</p>
+    <div class="embed-responsive embed-responsive-16by9">
+        <iframe class="embed-responsive-item" src="Ekika Ky'ekkobe.PDF.pdf" allowfullscreen></iframe>
+    </div>
+</section>
 
 <!-- Family Members Section -->
 <section id="family-members" class="container mt-5">
