--- a/public/draft.html
+++ b/public/draft.html
@@ -339,61 +339,58 @@
   <h2>Family Members</h2>
   <p>The family of the Late Reverend Enock Kyaluzi Ssebuliba has grown into a large community. In addition to the late Reverend's children, the family has expanded over the years with subsequent generations. Here are some of the descendants:</p>
   <ol>
-    <li>Mutumba Jesse Paul</li>
-    <li>Nsereko Moses</li>
-    <li>Kawuma Derrick</li>
-    <li>Nakayiwa Jane</li>
-    <li>Ssebuliba Enock</li>
-    <li>Nakakaawa Jane</li>
-    <li>Nantumbwe Winnie</li>
-    <li>Nsereko Eriab</li>
-    <li>Kayongo Samuel</li>
-    <li>Mulungi Liam</li>
-    <li>Ssekamatte Raymond</li>
-    <li>Ssuubi Miriam</li>
-    <li>Kyewalabye Collines</li>
-    <li>Ssebuliba Hannington</li>
-    <li>Ezra Enock Mugabi Ssebuliba</li>
-    <li>Christine Rhona Nantumbwe Kwagalakwe</li>
-    <li>Joel Silas Busuulwa</li>
-    <li>Cathryn Nsereko</li>
-    <li>Hannington Lule</li>
-    <li>Arnold Paul Enock Ssebuliba</li>
-    <li>Christine Liz Nalule </li>
-    <li>Enock Mugabi Ssebuliba</li>
-    <li>Gladys Grace Nambalirwa Tendo</li>
-    <li>Nambalirwa Vivian Faith Kwagalakwe</li>
-    <li>David Ssebuliba</li>
-    <li>Nakakaawa Jane</li>
-    <li>Nakakaawa Primah</li>
-    <li>Nakakaawa Mariam</li>
-    <li>Nantumbwe Winnie</li>
-    <li>Nantumbwe Nilsar</li>
-    <li>Namale Agnes</li>
-    <li>Ssebuliba David</li>
-    <li>Mutumba Gideon Divine</li>
-    <li>Busuulwa Emmie Ssebuliba</li>
-    <li>Carol Grace Nantege Kwagalakwe</li>
-    <li>Nantege Gloria</li>
-    <li>Mutumba Joel</li>
-    <li>Nantumbwe Eve Laurine</li>
-    <li>Namale Linda</li>
-    <li>Henry Mugera Mayanja</li>
-    <li>Racheal Ttendo Nantege</li>
-    <li>Mutambuze Saul</li>
-    <li>Ssenga Sarah</li>
-    <li>Winnie Angella</li>
-    <li>Sheilah</li>
-    <li>Declyne</li>
-    <li>Kyle</li>
-    <li>Lianah</li>
-    <li>Esau</li>
-    <li>Tivia</li>
-    <li>Eric</li>
-    
-    
-    <!-- Add more names as needed -->
-  </ol>
+    <li data-member="Mutumba Jesse Paul"data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Mutumba Jesse Paul</li>
+    <li data-member="Nsereko Moses "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nsereko Moses</li>
+    <li data-member="Kawuma Derrick "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Kawuma Derrick</li>
+    <li data-member="Nakayiwa Jane "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nakayiwa Jane </li>
+    <li data-member="Ssebuliba Enock "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssebuliba Enock</li>
+    <li data-member="Nakakaawa Jane "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nakakaawa Jane</li>
+    <li data-member="Nantumbwe Winnie "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nantumbwe Winnie</li>
+    <li data-member="Nsereko Eriab "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nsereko Eriab</li>
+    <li data-member="Kayongo Samuel "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Kayongo Samuel</li>
+    <li data-member="Mulungi Liam "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Mulungi Liam</li>
+    <li data-member="Ssekamatte Raymond "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssekamatte Raymond</li>
+    <li data-member="Ssuubi Miriam "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssuubi Miriam</li>
+    <li data-member="Kyewalabye Collines "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Kyewalabye Collines</li>
+    <li data-member="Ssebuliba Hannington "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssebuliba Hannington</li>
+    <li data-member="Ezra Enock Mugabi Ssebuliba "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ezra Enock Mugabi Ssebuliba</li>
+    <li data-member="Christine Rhona Nantumbwe Kwagalakwe "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Christine Rhona Nantumbwe Kwagalakwe</li>
+    <li data-member="Joel Silas Busuulwa "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Joel Silas Busuulwa </li>
+    <li data-member="Cathryn Nsereko "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Cathryn Nsereko</li>
+    <li data-member="Hannington Lule "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Hannington Lule</li>
+    <li data-member="Arnold Paul Enock Ssebuliba "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Arnold Paul Enock Ssebuliba</li>
+    <li data-member="Christine Liz Nalule  "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Christine Liz Nalule </li>
+    <li data-member="Enock Mugabi Ssebuliba "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Enock Mugabi Ssebuliba</li>
+    <li data-member="Gladys Grace Nambalirwa Tendo "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Gladys Grace Nambalirwa Tendo</li>
+    <li data-member="Nambalirwa Vivian Faith Kwagalakwe "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nambalirwa Vivian Faith Kwagalakwe</li>
+    <li data-member="David Ssebuliba "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">David Ssebuliba </li>
+    <li data-member="Nakakaawa Jane "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nakakaawa Jane</li>
+    <li data-member="Nakakaawa Primah "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nakakaawa Primah</li>
+    <li data-member="Nakakaawa Mariam "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nakakaawa Mariam </li>
+    <li data-member="Nantumbwe Winnie "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nantumbwe Winnie</li>
+    <li data-member="Nantumbwe Nilsar "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nantumbwe Nilsar</li>
+    <li data-member="Namale Agnes "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Namale Agnes </li>
+    <li data-member="Ssebuliba David "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssebuliba David</li>
+    <li data-member="Mutumba Gideon Divine "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Mutumba Gideon Divine </li>
+    <li data-member="Busuulwa Emmie Ssebuliba "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Busuulwa Emmie Ssebuliba</li>
+    <li data-member="Carol Grace Nantege Kwagalakwe "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Carol Grace Nantege Kwagalakwe</li>
+    <li data-member="Nantege Gloria "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nantege Gloria </li>
+    <li data-member="Mutumba Joel "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Mutumba Joel</li>
+    <li data-member="Nantumbwe Eve Laurine "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Nantumbwe Eve Laurine</li>
+    <li data-member="Namale Linda "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Namale Linda</li>
+    <li data-member="Henry Mugera Mayanja "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Henry Mugera Mayanja</li>
+    <li data-member="Racheal Ttendo Nantege "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Racheal Ttendo Nantege</li>
+    <li data-member="Mutambuze Saul "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Mutambuze Saul</li>
+    <li data-member="Ssenga Sarah "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Ssenga Sarah</li>
+    <li data-member="Winnie Angella "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Winnie Angella</li>
+    <li data-member="Sheilah "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Sheilah</li>
+    <li data-member="Declyne "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Declyne</li>
+    <li data-member="Kyle "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Kyle</li>
+    <li data-member="Lianah "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Lianah</li>
+    <li data-member="Esau "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Esau</li>
+    <li data-member="Tivia "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Tivia</li>
+    <li data-member="Eric "data-age="" data-contact="+256" data-location="Kampala" data-parents="" data-image="">Eric</li>
+      </ol>
 </section>
 
 
@@ -557,3 +554,4 @@ document.getElementById('currentYear').innerText = new Date().getFullYear();
   </script>
 </body>
 </html>
+
