--- a/public/index.html
+++ b/public/index.html
@@ -28,13 +28,13 @@
     }
 
     .gallery img {
-      width: 100%; /* Set a fixed width */
-      height: 200px; /* Set a fixed height */
-      object-fit: cover; /* Maintain aspect ratio and cover the container */
-      border-radius: 8px;
-      box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
-      transition: transform 0.3s ease-in-out;
-    }
+  width: 100%;
+  height: 100%; /* Set height to 100% */
+  object-fit: contain; /* Use 'contain' to maintain aspect ratio and fit inside the container */
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
+  transition: transform 0.3s ease-in-out;
+}
 
     #familyList li {
     cursor: pointer;
@@ -409,10 +409,10 @@
       <li data-member="Nantumbwe Nilsar "data-age="11" data-contact="" data-location="" data-parents="" data-image="Nilsar.jpg">Nantumbwe Nilsar</li>
       <li data-member="Namale Agnes "data-age="36" data-contact="0775155959" data-location="" data-parents="" data-image="no-image-available.png">Namale Agnes </li>
       <li data-member="Ssebuliba David "data-age="26" data-contact="" data-location="" data-parents="" data-image="Ssebuliba David.jpg">Ssebuliba David</li>
-      <li data-member="Mutumba Gideon Divine "data-age="12" data-contact="" data-location="" data-parents="" data-image="no no-image-available.png">Mutumba Gideon Divine </li>
+      <li data-member="Mutumba Gideon Divine "data-age="12" data-contact="" data-location="" data-parents="" data-image="no-image-available.png">Mutumba Gideon Divine </li>
       <li data-member="Busuulwa Emmie Ssebuliba "data-age="97" data-contact="0772408417" data-location="" data-parents="Lt. Rev. Enock Ssebuliba" data-image="no-image-available.png">Busuulwa Emmie Ssebuliba</li>
       <li data-member="Carol Grace Nantege Kwagalakwe "data-age="14" data-contact="0782704361" data-location="" data-parents="" data-image="Carol Grace Nantege Kwagalakwe.jpg">Carol Grace Nantege Kwagalakwe</li>
-      <li data-member="Nantege Gloria "data-age="26" data-contact="0" data-location="0705040009" data-parents="" data-image="no-image-available.png">Nantege Gloria </li>
+      <li data-member="Nantege Gloria "data-age="26" data-contact="0705040009" data-location="" data-parents="" data-image="no-image-available.png">Nantege Gloria </li>
       <li data-member="Mutumba Joel "data-age="0" data-contact="" data-location="" data-parents="" data-image="Joel Silas Busuulwa.jpg">Mutumba Joel</li>
       <li data-member="Nantumbwe Eve Laurine "data-age="11" data-contact="" data-location="" data-parents="" data-image="Eve Laurine.jpg">Nantumbwe Eve Laurine</li>
       <li data-member="Namale Linda "data-age="7" data-contact="" data-location="" data-parents="" data-image="Linda.jpg">Namale Linda</li>
