--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,62 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
   <style>
+    #header .countdown {
+  margin-bottom: 80px;
+}
+
+#header .countdown div {
+  text-align: center;
+  margin: 10px;
+  width: 100px;
+  padding: 15px 0;
+  background: rgba(255, 255, 255, 0.12);
+  border-top: 5px solid #ff0000;
+}
+
+#header .countdown div h3 {
+  font-weight: 700;
+  font-size: 44px;
+  margin-bottom: 15px;
+}
+
+#header .countdown div h4 {
+  font-size: 16px;
+  font-weight: 600;
+}
+
+@media (max-width: 575px) {
+  #header .countdown div {
+    width: 70px;
+    padding: 10px 0;
+    margin: 10px 8px;
+  }
+
+  #header .countdown div h3 {
+    font-size: 28px;
+    margin-bottom: 10px;
+  }
+
+  #header .countdown div h4 {
+    font-size: 14px;
+    font-weight: 500;
+  }
+}
+
+
+        #countdown-section {
+            text-align: center;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        #countdown {
+            font-size: 24px;
+            color: rgb(251, 0, 0);
+            font-weight: bold;
+        }
 #photo-gallery {
       text-align: center;
     }
@@ -141,6 +197,31 @@
       <h1 class="display-4" id="welcomeMessage">Welcome</h1>
     </div>
   </div>
+  <header id="header" class="d-flex align-items-center">
+    <div class="container d-flex flex-column align-items-center">
+
+      <h1></h1>
+      <h2>PARTY BEGINS IN:</h2>
+      <div class="countdown d-flex justify-content-center" data-count="2023/12/03">
+        <div>
+          <h3>%d</h3>
+          <h4>Days</h4>
+        </div>
+        <div>
+          <h3>%h</h3>
+          <h4>Hours</h4>
+        </div>
+        <div>
+          <h3>%m</h3>
+          <h4>Minutes</h4>
+        </div>
+        <div>
+          <h3>%s</h3>
+          <h4>Seconds</h4>
+        </div>
+      </div>
+
+  </header>
 
   <!-- History Section -->
   <section id="history" class="container mt-5">
@@ -600,6 +681,21 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 
   <script>
+ let countdown = document.querySelector('.countdown');
+  const output = countdown.innerHTML;
+
+  const countDownDate = function() {
+    let timeleft = new Date(countdown.getAttribute('data-count')).getTime() - new Date().getTime();
+
+    let days = Math.floor(timeleft / (1000 * 60 * 60 * 24));
+    let hours = Math.floor((timeleft % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    let minutes = Math.floor((timeleft % (1000 * 60 * 60)) / (1000 * 60));
+    let seconds = Math.floor((timeleft % (1000 * 60)) / 1000);
+
+    countdown.innerHTML = output.replace('%d', days).replace('%h', hours).replace('%m', minutes).replace('%s', seconds);
+  }
+  countDownDate();
+  setInterval(countDownDate, 1000);
 
 document.getElementById('currentYear').innerText = new Date().getFullYear();
 
@@ -645,7 +741,7 @@ document.getElementById('currentYear').innerText = new Date().getFullYear();
           "kiwabudde", "lwantanya", "mbatudde", "mbawadde", "nababi", "nabanoba", "nabikaajumbe", "nabitengero", "nabwami",
           "nabweggamo", "najjolo", "nakakaawa", "nakalembe", "nakamatte", "nakasinde", "nakatudde", "nakawuma", "nakayiwa",
           "nakibuule", "nalule", "nalwanga", "namale", "nambalirwa", "nambi", "namboga", "nambooze", "namboyera", "nammembe",
-          "nango", "nansereko", "nantege", "nantumbwe", "nassimbwa", "ndyona", "nnaamala", "ntabadde", "mutambuze"     
+          "nango", "nansereko", "nantege", "nantumbwe", "nassimbwa", "ndyona", "nnaamala", "ntabadde", "mutambuze", "ssuubi"     
         ];
 
         // Check if the entered username is in the allowed list
