--- a/public/index.html
+++ b/public/index.html
@@ -461,7 +461,7 @@
       <li data-member="Mutumba Jesse Paul"data-age="27" data-contact="0750687790" data-location="Namungoona" data-parents="Kyewalabye Robert" data-image="Mutumba Jesse Paul.jpg">Mutumba Jesse Paul</li>
       <li data-member="Nsereko Moses "data-age="62" data-contact="0771935360" data-location="Kkumbu" data-parents="Lt. Rev. Enock Ssebuliba" data-image="Nsereko Moses.jpg">Nsereko Moses</li>
       <li data-member="Kawuma Derrick "data-age="25" data-contact="+49 1575 4442199" data-location="Germany" data-parents="Kyewalabye Robert" data-image="Kawuma Derrick.jpg">Kawuma Derrick</li>
-      <li data-member="Nakayiwa Jane "data-age="28" data-contact="0779757278" data-location="Luweero" data-parents="" data-image="Nakayiwa Jane.jpg">Nakayiwa Jane Christine Birimuye Kwagalakwe Kiwumulo</li>
+      <li data-member="Nakayiwa Jane Christine Birimuye Kwagalakwe Kiwumulo"data-age="28" data-contact="0779757278" data-location="Luweero" data-parents="" data-image="Nakayiwa Jane.jpg">Nakayiwa Jane Christine Birimuye Kwagalakwe Kiwumulo</li>
       <li data-member="Ssebuliba Enock "data-age="32" data-contact="0704053669" data-location="Kimwanyi" data-parents="" data-image="Ssebuliba Enock.jpg">Ssebuliba Enock</li>
       <li data-member="Nakakaawa Jane "data-age="35" data-contact="0756360582" data-location="" data-parents="" data-image="Nakakaawa Jane.jpg">Nakakaawa Jane</li>
       <li data-member="Nantumbwe Winnie "data-age="32" data-contact="0708102904" data-location="" data-parents="" data-image="no-image-available.png">Nantumbwe Winnie</li>
