--- a/public/index.html
+++ b/public/index.html
@@ -612,8 +612,8 @@
                                                                                               <img src="Nakakaawa Jane.jpg" alt="Image 1">
                                                                                             </a>
                                                                                             
-                                                                                                <a data-fancybox="gallery" data-caption="" href="">
-                                                                                                  <img src="Nakayiwa Jane.jpg" alt="Image 1">
+                                                                                                <a data-fancybox="gallery" data-caption="Nakayiwa Jane" href="Nakayiwa Jane.jpg">
+                                                                                                  <img src="Nakayiwa Jane.jpg" alt="Nakayiwa Jane">
                                                                                                 </a>
                                                                                                 
                                                                                                     <a data-fancybox="gallery" data-caption="" href="">
