--- a/public/index.html
+++ b/public/index.html
@@ -155,7 +155,7 @@
               <label for="username">Clan Name:</label>
               <input type="text" class="form-control" id="username" required>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-primary">Login</button>
           </form>
         </div>
       </div>
