--- a/public/index.html
+++ b/public/index.html
@@ -221,6 +221,19 @@
         </div>
       </div>
 
+      <!-- Download APK Section -->
+<div class="container mt-5">
+    <div class="row justify-content-center">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-body text-center">
+                    <p><strong>Keep in touch with your relatives. Install our family app now!</strong></p>
+                    <a href="Ssebulibas.apk" download class="btn btn-success btn-lg">Download APK</a>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
   </header>
 
   <!-- History Section -->
