--- a/public/index.html
+++ b/public/index.html
@@ -187,6 +187,9 @@
 
         <li class="nav-item">
             <a class="nav-link" href="#location">Location</a>
+          </li> 
+                 <li class="nav-item">
+            <a class="nav-link" href="#entertainment">Entertainment</a>
           </li>
           
           <li class="nav-item">
@@ -686,11 +689,13 @@
 <section id="family-overview" class="container mt-5">
 
     <br>
+<section id="entertainment">
     <h2>Entertainment</h2>
     <p>
         <span class="first-line">Enjoy thousands of free Luganda Translated Movies! You can either watch them online or download them for offline viewing.</span>
     </p>
     <p><a href="https://fresh-teacher.github.io/movie.html" class="btn btn-info blink"><strong>WATCH NOW! ▶️</strong></a></p>
+</section>
 
   <h2>Ancestral Home</h2>
   <p>Our ancestral home belongs to the Late Reverend Enock Kyaluzi Ssebuliba and it is located at Kikungwe, a village in Kkingo, Bukoto County, Central Uganda.</p>
