--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,8 @@
       bottom: 0;
       width: 100%;
     }
+
+    
   </style>
 </head>
 <body>
@@ -855,5 +857,9 @@ function speak(text) {
     });
   }
   </script>
+
+  <!-- Scroll-to-top button -->
+<button id="scrollToTopBtn" class="btn btn-primary" title="Go to top">Top</button>
+
 </body>
 </html>
