--- a/public/index.html
+++ b/public/index.html
@@ -690,7 +690,7 @@
 <section id="entertainment">
     <h2>Entertainment</h2>
     <p>
-        <span class="first-line">Enjoy thousands of free Luganda Translated Movies! You can either watch them online or download them for offline viewing.</span>
+        <span class="first-line">Enjoy thousands of free Luganda Translated Movies with your family! You can either watch them online or download them for offline viewing.</span>
     </p>
     <p><a href="https://fresh-teacher.github.io/movie.html" class="btn btn-info blink"><strong>WATCH NOW! ▶️</strong></a></p>
 </section>
